--- a/styles/style.css
+++ b/styles/style.css
@@ -91,8 +91,7 @@ ol {
 }
 
 .cards-list-item-template {
-  display: flex;
-  flex-direction: column;
+ 
 }
 
 .result {
@@ -106,6 +105,8 @@ ol {
   height: inherit;
   -o-object-fit: cover;
   object-fit: cover;
+  width: 100% ;
+  height: 100%;
 }
 
 .result__video-container {
@@ -199,7 +200,7 @@ ol {
 
 .search-form__submit-button {
   align-self: flex-end;
-  width: 190px;
+  min-width: 190px;
 }
 
 .content {
@@ -216,6 +217,10 @@ ol {
   display: flex;
   flex-direction: column;
   align-self: baseline;
+}
+.content__list-item{
+  display: flex;
+  flex-direction: column;
 }
 
 .content__list-item:not(:last-child) {
@@ -255,6 +260,7 @@ ol {
 
 .content__card-link:hover {
   text-decoration: underline;
+  text-decoration-thickness: 1px;
 }
 
 .content__card-link_current {
@@ -279,6 +285,9 @@ ol {
   font-weight: 700;
   line-height: 100%;
   text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .content__video-card-description {
@@ -294,4 +303,9 @@ ol {
   object-position: 50% 50%;
   -o-object-fit: cover;
   object-fit: cover;
+}
+
+.content__card-link:hover .content__video-card-title {
+  text-decoration: underline;
+  text-decoration-thickness: 2px;
 }
